# applik8s

./: .gitignore  BACKLOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.operator-host  README.md  RECONCILIATION_CONTRACT.md  RELEASE_NOTES.md  SECURITY.md  TESTING.md  biome.json  character-test-roadmap.md  package.json  tsconfig.json  vitest.character.config.ts  vitest.config.ts  vitest.e2e.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_coordination.md
.github/workflows/: ci.yml  deploy.yml  release-evidence.yml
crates/: README.md
crates/applik8s-operator-host/: Cargo.toml
crates/applik8s-operator-host/src/: lib.rs  main.rs
crates/applik8s-operator-host/tests/: host_contract.rs
crates/applik8s-operator-host/tests/fixtures/abi/: v1alpha1-minimal-runtime.json  v1alpha1-timeout-cancel.json  v2alpha1-incompatible.json
crates/applik8s-operator-host/tests/fixtures/bundles/v0.1.0/: operator-manifest.json
crates/applik8s-operator-host/tests/fixtures/compatibility/: matrix.json
crates/applik8s-runtime-bridge/: Cargo.toml
crates/applik8s-runtime-bridge/src/: applier.rs  engine.rs  error.rs  invocation.rs  kube.rs  lib.rs  payload.rs
crates/applik8s-runtime-bridge/tests/: bridge_contract.rs
crates/applik8s-runtime-contract/: Cargo.toml
crates/applik8s-runtime-contract/src/: lib.rs
crates/applik8s-runtime-contract/tests/: generated_contract.rs
docs/: api-reference.md  contract-evolution.md  decisions.md  first-run.md  future-surface.md  generated-artifacts.md  imagejob-golden-path.md  kubernetes-compatibility.md  leader-election.md  maintainer-policy.md  positioning.md  release-evidence-v0.1.md  release-gates.md  replay-debugging.md  runtime-diagnostics.md  runtime-image.md  scale-boundaries.md  schema-evolution.md  security-model.md  stabilization-boundary.md  troubleshooting.md  typekro-golden-path.md
examples/: imagejob.ts
examples/test/: product-stories.character.test.ts
scripts/: check-docs-consistency.mjs  check-local-gates.mjs  check-prerelease-gates.mjs  check-release-readiness.mjs  check-runtime-contract.ts  check-static-imports.mjs  check-test-taxonomy.mjs  check-typecasts.mjs  generate-runtime-contract.ts  package-publish-dry-run.mjs  publish-packages.mjs  replay-artifact.mjs  runtime-contract-artifact.ts
scripts/fixtures/: replay-artifact.metadata-only.json
