[package]
name = "applik8s-runtime-bridge"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
applik8s-runtime-contract = { path = "../applik8s-runtime-contract" }
json-patch = "4"
kube = { version = "4.0.0", default-features = false, features = ["client", "runtime", "rustls-tls"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "time"] }
wasmtime = { version = "45.0.2", default-features = false, features = ["async", "component-model", "cranelift", "runtime", "std"] }

[dev-dependencies]
k8s-openapi = { version = "0.28.0", features = ["v1_32"] }
wat = "1"
